only run if old object has values